--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Sun Aug 07 19:22:17 IST 2022
+#Mon Aug 08 17:03:57 IST 2022
 execution.launch.vmArgs=""
 execution.default.smartWaitMode=true
 show-Profiles=true
@@ -15,3 +15,10 @@ show-androidapp=true
 show-Data=true
 show-Plugins=true
 show-Tutorials=true
+report.videoRecorderOption="{\\"enable\\"\:false,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"LOW\\",\\"recordAllTestCases\\"\:false,\\"allowedRecordIfFailed\\"\:true,\\"allowedRecordIfPassed\\"\:false}"
+execution.logTestSteps=true
+execution.default.timeout=30
+execution.default.openReportAfterExecuting=true
+execution.default.quitDriversAfterExecutingTestCase=true
+execution.default.quitDriversAfterExecutingTestSuite=true
+report.takeScreenshotOption=true
