--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Sun Aug 07 19:22:17 IST 2022
+#Mon Aug 08 17:03:57 IST 2022
 execution.webUi.enablePageLoadTimeout=true
 execution.webUi.pageLoadTimeout=30
 execution.webUi.ignorePageLoadTimeOutException=false
@@ -12,3 +12,6 @@ execution.default.webUi.actionDelay=0
 execution.default.waitForIEHanging=600
 execution.default.selectingCapturedObjectXpaths="xpath\:attributes,true;xpath\:idRelative,true;dom\:name,true;xpath\:link,true;xpath\:neighbor,true;xpath\:href,true;xpath\:img,true;xpath\:position,true;xpath\:customAttributes,true"
 execution.default.selectingCapturedObjectProperties="id,true;name,true;alt,true;checked,true;form,true;href,true;placeholder,true;selected,true;src,true;title,true;type,true;text,true;linked_text,true"
+execution.default.webUi.excludeKeywords="[\\"verifyElementPresent\\",\\"verifyElementNotPresent\\"]"
+execution.default.webUi.methodsPriorityOrder="XPATH,true;BASIC,true;CSS,true;IMAGE,true"
+execution.default.webUi.selfHealingEnabled=true
